--- a/final.html
+++ b/final.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REFRIGERATOR CONTENTS</title>
+    <title>SMART FRIDGE BY DEBUG THUGS</title>
     <link rel = "icon" href = "https://cdn-icons-png.freepik.com/512/7395/7395535.png" type = "image/x-icon">
     <link rel = "stylesheet" href = "final.css">
 </head>
 <body>
-    <h1>REFRIGERATOR CONTENTS</h1>
+    <h1>SMART FRIDGE BY DEBUG THUGS</h1>
     
     <div class="list-container">
         <div class="list-item">
