--- a/final.html
+++ b/final.html
@@ -8,9 +8,12 @@
     <link rel = "stylesheet" href = "final.css">
 </head>
 <body>
+     <div id = "a">
+        <a href = "http://127.0.0.1:5500/final.html" target = "_blank">
+            		<img src = "/fridge.png">
+        </a>
+    </div>
     <h1>SMART FRIDGE BY DEBUG THUGS</h1>
-    <pre id = "a">--  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --  --</pre>
-    <br>
     <div class="list-container">
         <div class="list-item">
             <div class="input-group">
