--- a/product.html
+++ b/product.html
@@ -20,7 +20,7 @@
     </div>
     
     <div class="bottom-buttons">
-        <a href="/optimal_temperatures.html" class="bottom-button">Optimal Temperature</a>
+        <a href="/optimal_temperatures.html" class="bottom-button" target = "_blank">Optimal Temperature</a>
         <div id="optimal-temp" class="bottom-button">33°F</div>
         <button class="bottom-button add-item-button" onclick="addItemCard()">+ Add Item</button>
     </div>
