navigation improvements and added back button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="header">
-    <a href="./index.html" target="_self">
+    <a href="./index.html">
       <img src="./assets/ice-cream.png" alt="Eatwise">
     </a>
     <h1>EatWise</h1>
@@ -20,7 +20,7 @@
   </div>
   
   <div class="bottom-buttons">
-    <a href="./temperatures.html" target="_blank" class="bottom-button">Optimal Temperature</a>
+    <a href="./temperatures.html" class="bottom-button">Optimal Temperature</a>
     <div id="optimal-temp" class="bottom-button">33°F</div>
     <button class="bottom-button add-item-button" onclick="addItemCard()">+ Add Item</button>
   </div>
