--- a/temperatures.html
+++ b/temperatures.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Food Temperatures | © Debug Thugs</title>
   <link rel="icon" href="https://cdn-icons-png.freepik.com/512/7395/7395535.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./css/temperatures.css">
 </head>
 <body>
   <div class="header">
-    <a href="./index.html" target="_blank">
-      <img src="./assets/ice-cream.png" alt="Eatwise">
+    <a href="./index.html" class="back-button" title="Back to Home">
+    <i class="fas fa-arrow-left"></i>
+  </a>
+    <a href="./index.html">
+      <img src="./assets/ice-cream.png" alt="Eatwise" class="logo-img">
     </a>
     <h1>Food Temperature Table</h1>
   </div>
